# takuzu

./: .clang-format  4x4_90.txt  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  game.c  game_aux.c  game_ext.c  game_sdl.c  game_solve.c  game_struct.h  game_test_argomes  game_test_argomes.c  game_test_juruch  game_test_juruch.c  game_test_ymaabout  game_test_ymaabout.c  game_text  game_text.c  game_text_argomes.c  game_tools.c  main.c  model.c  model.h  queue.c  text
web/: .html  Makefile  canvas.js  demo.js  game.html  game.js  game.js:Zone.Identifier  game.wasm  index.html  mystyle.css  test.html  wrapper.c
